--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
           <span class="minimize"></span>
           <span class="zoom"></span>
         </nav>
+        <div class="sub-result">0</div>
         <div class="result" id="result">0</div>
       </section>
       <section class="contents">
